# Yggmail-ng

./: .gitignore  Cargo.toml  Cross.toml  README.md  README.ru.md  build-android.ps1  build-android.sh
.cargo/: config.toml
crates/yggmail/: Cargo.toml
crates/yggmail-mobile/: Cargo.toml  build.rs
crates/yggmail-mobile/src/: lib.rs  yggmail_mobile.udl
crates/yggmail/src/: address.rs  config.rs  core_conn.rs  lib.rs  main.rs
crates/yggmail/src/imap/: mod.rs
crates/yggmail/src/peer/: mod.rs  receiver.rs  sender.rs
crates/yggmail/src/smtp/: mod.rs
crates/yggmail/src/storage/: crypt.rs  mails.rs  mod.rs  queue.rs
crates/yggmail/src/ymp/: mod.rs  types.rs
crates/yggmail/tests/: multihop_routing.rs
